<resources>
    <string name="app_name">CoopAchievement</string>
    <string name="add_a_new_game">Add a new Game</string>
    <string name="game_name">Game Name:</string>
    <string name="type_name_here">Type Name</string>
    <string name="poor_score">Poor Score:</string>
    <string name="great_score">Great Score:</string>
    <string name="blank" />
    <string name="empty_list_txt">The Application Feels Lonely and Empty</string>
    <string name="help_create_txt">Press the button to create a game config</string>
    <string name="terrible_trolls">Terrible Trolls</string>
    <string name="goofy_goblins">Goofy Goblins</string>
    <string name="fabulous_fairies">Fabulous Fairies</string>
    <string name="dastardly_dragons">Dastardly Dragons</string>
    <string name="horrendous_hagfish">Horrendous Hagfish</string>
    <string name="epic_elephants">Epic Elephants</string>
    <string name="awesome_alligators">Awesome Alligators</string>
    <string name="bogus_blowfish">Bogus Blowfish</string>
    <string name="lowly_leech">Lowly Leech</string>
    <string name="total_score">Total score</string>
    <string name="num_players"># players</string>
    <string name="empty_string">-</string>
    <string name="score">score</string>
    <string name="players">Players</string>
    <string name="achievement_level">Achievement Level</string>
    <string name="config_achievement_title">Achievement Threshold</string>
    <string name="zero_points_string">0 Points</string>
    <string name="point_string">\ Points</string>
    <string name="edit_game">Edit Game</string>
    <string name="new_game">New Game</string>
    <string name="no_history_available_use_the_button_to_add_a_new_game">No History Available! Use the \'+\' button to add a new game.</string>
    <string name="edit_config_title">Edit Config</string>
    <string name="create_config_title">Create Config</string>
    <string name="save_config">Saving</string>
    <string name="great_score_config">Great Score is less than Poor Score or the range is less than 8</string>
    <string name="missing_parameter_config">Missing Parameters</string>
    <string name="delete_config">Deleting</string>
    <string name="zero_error">Error: cannot have 0 players</string>
    <string name="difficulty">Difficulty</string>
    <string name="new_game_zero_players">Error: Empty game elements</string>
    <string name="initial_player_text_list">Score</string>
    <string name="player_1_initial_list_text">Player 1</string>
    <string name="time_played">Time Played</string>
    <string name="achivement">Achivement</string>
    <string name="difficulty_level">Difficulty Level</string>
    <string name="number_of_players">Number of Players</string>
    <string name="game_number">Game Number</string>
    <string name="confirm_text">Theme saved! Exit to main menu? </string>
    <string name="save">Save</string>
    <string name="you_got_an_achievement">You got an achievement!</string>
    <string name="select_theme">Select Theme :</string>
    <string name="option">Option</string>
    <string name="not_possible">Not Possible</string>
    <string name="zero">0</string>
    <string name="colon_space">:\u0020\u0020\u0020\u0020\u0020</string>
    <string name="colon_greater">:  Greater Than\u0020</string>
    <string name="takepic">Add image</string>
    <string name="todo">TODO</string>
    <string name="points_to_next_achievement">Points to next achievement:</string>
    <string name="alert_max_score_achieved">You earned the highest achievement! Congratulations!</string>
    <string name="alert_not_max_achievement_1">You were so close!\ </string>
    <string name="alert_not_max_achievement_2"> \ points away from the next achievement:\ </string>
    <string name="animate">Animate</string>
    <string name="statistics">Statistics</string>
    <string name="total_achievements">Total Achievements</string>
    <string name="developers">Team Chlorine Developers:</string>
    <string name="developer_names">Preston Quach \nDante Umpherville-Choy \nBanpreet Aulakh \nDuy Nguyen</string>
    <string name="pokeball_link">Pokeball: <a href="https://pixabay.com/illustrations/pokeball-pokemon-game-ball-1594373/">Pokeball Link </a></string>
    <string name="config">Config</string>
    <string name="about">About</string>
    <string name="permissions">Camera permissions needed. Please grant camera permissions in android settings.</string>

    <string-array name="theme_choice">
        <item>Mythical</item>
        <item>Paw Patrol</item>
        <item>Dinosaur</item>
    </string-array>

    <string-array name="mythical">
        <item>Worrying Werewolves </item>
        <item>Phony Phoenix</item>
        <item>Messy Mermaids</item>
        <item>Ethical Elves</item>
        <item>Friendly Fairies</item>
        <item>Horrified Hydras</item>
        <item>Undying Unicorns</item>
        <item>Destructive Dragons</item>
        <item>Legendary Leviathan </item>
    </string-array>

    <string-array name="paw_patrol">
        <item>Horrible Humdinger</item>
        <item>Rowdy Ruff Pack</item>
        <item>Confused Copycat</item>
        <item>Sassy Sweetie</item>
        <item>Zany Zuma</item>
        <item>Radiant Rocky</item>
        <item>Reliable Rubble</item>
        <item>Super Skye</item>
        <item>Marvelous Marshal</item>
    </string-array>

    <string-array name="dinosaur">
        <item>Terrible Tyrannosaurus </item>
        <item>Tired Pterodactyl </item>
        <item>Apathetic Allosaurus</item>
        <item>Drab Dilophosaurus</item>
        <item>Melancholy Mosasaurus</item>
        <item>Great Giganotosaurus </item>
        <item>Terrific Triceratops</item>
        <item>Super Stegosaurus </item>
        <item>Valiant velociraptor </item>
    </string-array>

    <string-array name="links">
        <item>https://pixabay.com/illustrations/pokeball-pokemon-game-ball-1594373/</item>
        <item>https://www.pngwing.com/en/free-png-iqjzv</item>
        <item>https://www.pngwing.com/en/free-png-bnehu</item>
        <item>https://www.pngwing.com/en/free-png-pgcnj</item>
        <item>https://www.pngwing.com/en/free-png-bznqa</item>
        <item>http://www.clker.com/clipart-4389.html</item>
        <item>https://blog.heartsupport.com/forever-alone-467b2b5c71e6</item>
        <item>https://pixabay.com/</item>
        <item>https://pixabay.com/</item>
        <item>https://www.youtube.com/watch?v=p9PHXRay3r4</item>
        <item>https://www.youtube.com/watch?v=Wc62qX7Ra5I\u0026t=173s</item>
        <item>https://stackoverflow.com/questions/15421271/custom-fragmentdialog-with-round-corners-and-not-100-screen-width</item>
        <item>https://gist.github.com/marc0x71/f571f4dfe328b662860cd4e80bd7f6af</item>
        <item>https://stackoverflow.com/questions/8586242/how-to-store-images-using-sharedpreference-in-android</item>
    </string-array>

    <string-array name="link_name">
        <item>Pokeball</item>
        <item>PawPatrol Main Menu Banner</item>
        <item>Dinosaur</item>
        <item>Leviathan</item>
        <item>PawPatrol Achievement</item>
        <item>Red dice</item>
        <item>Forever alone face</item>
        <item>Shouting Yeah Sound</item>
        <item>Yeahboy Sound</item>
        <item>Scale Up Down Animation</item>
        <item>Zoom, Fade, and Rotate Animation</item>
        <item>Rounded Dialog Fragment Corner</item>
        <item>Dialog Fragment Scaling</item>
        <item>Storing image data in shared preferences</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
