<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditConfigActivity">

    <TextView
        android:id="@+id/txtGameName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/game_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.153"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtPoorScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/poor_score"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.144"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtGameName" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/great_score"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPoorScore" />

    <TextView
        android:id="@+id/config_num_players"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/num_players"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.162"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/editTextGreatScore"
        android:layout_width="54dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.169"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/editTextPoorScore"
        app:layout_constraintVertical_bias="0.014"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editText_numPlayers"
        android:layout_width="54dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.235"
        app:layout_constraintStart_toEndOf="@+id/config_num_players"
        app:layout_constraintTop_toBottomOf="@+id/editTextGreatScore"
        app:layout_constraintVertical_bias="0.055"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editTextGameName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/type_name_here"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.62"
        app:layout_constraintStart_toEndOf="@+id/txtGameName"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/editTextPoorScore"
        android:layout_width="54dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.197"
        app:layout_constraintStart_toEndOf="@+id/txtPoorScore"
        app:layout_constraintTop_toBottomOf="@+id/editTextGameName"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/config_achievement_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/config_achievement_title"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_numPlayers"
        app:layout_constraintVertical_bias="0.094" />

    <TextView
        android:id="@+id/config_fabulous_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_string"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/config_fabulous_fairies" />

    <TextView
        android:id="@+id/config_bogus_blowfish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bogus_blowfish"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.017"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/config_horrendous_val"
        app:layout_constraintVertical_bias="0.007" />

    <TextView
        android:id="@+id/config_horrendous_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_string"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.147"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/config_horrendous_hagfish"
        app:layout_constraintVertical_bias="0.003" />

    <TextView
        android:id="@+id/config_awesome_alligators"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/awesome_alligators"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/config_dastardly_val"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/config_horrendous_hagfish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/horrendous_hagfish"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/config_lowly_leech_val"
        app:layout_constraintVertical_bias="0.003" />

    <TextView
        android:id="@+id/config_fabulous_fairies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="192dp"
        android:text="@string/fabulous_fairies"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/config_achievement_title" />

    <TextView
        android:id="@+id/config_lowly_leech_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_string"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.147"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/config_lowly_leech"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/config_terrible_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_string"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.147"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/config_terrible_trolls"
        app:layout_constraintVertical_bias="0.005" />

    <TextView
        android:id="@+id/config_goofy_goblins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goofy_goblins"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/config_achievement_title"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/config_dastardly_dragons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dastardly_dragons"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/config_goofy_val"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/config_dastardly_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_string"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.874"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/config_dastardly_dragons"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/config_goofy_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_string"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.874"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/config_goofy_goblins"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/config_bogus_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_string"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.147"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/config_bogus_blowfish"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/config_epic_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_string"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.874"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/config_epic_elephants"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/config_epic_elephants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/epic_elephants"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/config_awesome_val"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/config_awesome_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_string"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.874"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/config_awesome_alligators"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/config_terrible_trolls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terrible_trolls"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.026"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/config_bogus_val"
        app:layout_constraintVertical_bias="0.009" />

    <TextView
        android:id="@+id/config_lowly_leech"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lowly_leech"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/config_achievement_title"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>